--- a/diarization.ipynb
+++ b/diarization.ipynb
@@ -419,12 +419,12 @@
       },
       "outputs": [],
       "source": [
-        "files = os.listdir(\"path to the audio files\")\n",
+        "files = os.listdir(\"path to the audio files\") #Add your path here\n",
         "print(len(files))\n",
         "i = 0\n",
         "for i in files:\n",
         "  name, ext = os.path.splitext(i)\n",
-        "  wavs_path = f\"path where you wanna save the partitions of each file/{name}/\"\n",
+        "  wavs_path = f\"path where you want to save the partitions of each file/{name}/\" #Add your path here like this: f\"home/data/intervals/{name}/\"\n",
         "  wavs = os.listdir(wavs_path)\n",
         "  wavs.remove(f\"{name}.json\")\n",
         "  for i in range(len(wavs)):\n",
@@ -451,13 +451,16 @@
         "        predictions.extend(batch_predictions)\n",
         "  list_of_dicts = []\n",
         "\n",
-        "  with open(f'path where you wanna save the partitions of each file/{name}/{name}.json', 'r', encoding='utf-8') as file:\n",
+        "  #Add your path here\n",
+        "  with open(f'path where you want to save the partitions of each file/{name}/{name}.json', 'r', encoding='utf-8') as file:\n",
         "    list_of_dicts = json.load(file)\n",
         "  file.close()\n",
         "  for i in range (len(list_of_dicts)):\n",
         "    list_of_dicts[i][\"transcript\"] = predictions[i]\n",
         "    print(list_of_dicts[i])\n",
-        "  with open(f\"paht where you wanna save the jsons/{name}.json\", 'w', encoding='utf-8') as file:\n",
+        "\n",
+        "  #Add your path here\n",
+        "  with open(f\"path where you want to save the jsons/{name}.json\", 'w', encoding='utf-8') as file:\n",
         "    json.dump(list_of_dicts, file, ensure_ascii=False, indent=4)\n",
         "\n",
         "  file.close()\n",
